--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,7 @@
 body{
-    background-color: blanchedalmond;
+    background-color:rgb(189, 85, 85);
+}
+
+.blue{
+    background-color: rgb(65, 65, 236);
 }
